add app background-color

--- a/client/sass/base/_base.scss
+++ b/client/sass/base/_base.scss
@@ -17,6 +17,7 @@
 html {
   // This defines what 1 rem is in this project.
   font-size: 62.5%;
+  background: #dae0e6;
 }
 
 // TODO: We should declare default font-family and font-weight here.
