--- a/client/components/SortView/sortview.scss
+++ b/client/components/SortView/sortview.scss
@@ -67,7 +67,7 @@
 
           &__icon {
             height: 1.6rem;
-            width: 1.6rem !important;
+            width: 1.6rem;
             margin-left: 0.2rem;
             color: #5296dd;
           }
@@ -88,11 +88,12 @@
 
           &:hover {
             color: #1c1c1c;
+            background-color: #e9f5fd;
           }
 
           &__icon {
             height: 1.6rem;
-            width: 1.6rem !important;
+            width: 1.6rem;
             margin: 0 0.3rem 0 0.1rem;
             color: #5296dd;
           }
@@ -103,10 +104,6 @@
             color: inherit;
             margin: 0;
             white-space: nowrap;
-          }
-
-          &:hover {
-            background-color: #e9f5fd;
           }
         }
       }
