added google fonts

--- a/client/sass/base/_base.scss
+++ b/client/sass/base/_base.scss
@@ -23,9 +23,9 @@ html {
 body {
   box-sizing: border-box;
   // this seems to be the font most frequently used
-  font-family: IBMPlexSans, Arial, sans-serif;
+  font-family: IBMPlexSans, sans-serif;
   // this font is used as post content and 'footer' box
-  font-family: Noto Sans, Arial, sans-serif;
+  font-family: Noto Sans, sans-serif;
   // this property below isn't valid - did you mean letter-spacing or line-height?
   line-spacing: 1.7;
 }
