edited/refactored button components

--- a/client/components/AuthForms/authforms.scss
+++ b/client/components/AuthForms/authforms.scss
@@ -88,8 +88,9 @@
     }
 
     &__button {
-      width: 15rem;
-      transform: translateY(15%);
+      width: 15.5rem;
+      font-size: 1.4rem;
+      height: 35px;
     }
 
     &__link {
