--- a/client/components/AuthForms/authforms.scss
+++ b/client/components/AuthForms/authforms.scss
@@ -59,15 +59,12 @@
     padding: 24px;
     min-width: 260px;
     max-width: 440px;
+    color: #1a1a1b;
 
     & > h2 {
       font-size: 2rem;
       font-weight: bold;
-    }
-
-    & > p {
-      font-size: 2rem;
-      font-weight: bold;
+      margin: 0;
     }
 
     &__icon {
@@ -78,7 +75,7 @@
 
     &__title {
       text-transform: uppercase;
-      padding: 2rem 0 0 0.4rem;
+      margin: 12px 0 20px 0;
       font-size: 1.7rem;
       font-weight: bold;
     }
@@ -93,51 +90,58 @@
       height: 35px;
     }
 
+    &__links {
+      margin: 16px 0 24px;
+      font-size: 1.2rem;
+
+      a {
+        font-size: 1.2rem;
+      }
+    }
+
     &__link {
       display: inline-block;
-      margin-top: 2rem;
       font-size: 1.4rem;
-      &--username {
-        text-decoration: none;
-        color: $blue;
+      color: $blue;
+      cursor: pointer;
 
-        &:hover {
-          color: rgba($blue, 0.6);
-        }
-        &::after {
-          content: "・";
-        }
-      }
-      &--password {
-        text-decoration: none;
-        color: $blue;
-
-        &:hover {
-          color: rgba($blue, 0.6);
-        }
+      &:hover {
+        color: rgba($blue, 0.6);
       }
     }
 
     &__info {
-      font-size: 1.4rem;
+      font-size: 1.2rem;
+      margin: 12px 0;
+      line-height: 1.8rem;
 
-      &--capitalized {
+      a {
+        color: $blue;
         font-weight: bold;
         text-transform: uppercase;
-
-        &:hover {
-          color: rgba($blue, 0.6);
-        }
+        font-size: 1.2rem;
       }
 
-      p > span {
+      span {
         color: $blue;
-        cursor: pointer;
-
-        &:hover {
-          color: rgba($blue, 0.6);
-        }
       }
+    }
+
+    &__middot {
+      margin: 0 5px;
+      color: $blue;
+    }
+
+    .--capitalize {
+      text-transform: uppercase;
+      font-weight: bold;
+    }
+
+    .sub-description {
+      font-size: 1.4rem;
+      line-height: 2.1rem;
+      margin: 0 0 10px;
+      // font-weight: lighter !important;
     }
   }
 
@@ -188,11 +192,6 @@
       }
     }
   }
-}
-
-.sub-description {
-  font-size: 1.8rem !important;
-  font-weight: lighter !important;
 }
 
 @media screen and (max-width: 500px) {
