styling changes, created footer component for static pages

--- a/client/components/PremiumHero/premiumhero.scss
+++ b/client/components/PremiumHero/premiumhero.scss
@@ -1,7 +1,8 @@
 .hero {
   background-image: url(https://www.redditstatic.com/desktop2x/img/gold/premium-hero-g.jpg);
   box-sizing: border-box;
-  padding-top: 20rem;
+  padding-top: 11rem;
+  padding-left: 5rem;
   margin-top: 5rem;
   min-height: 544px;
   background-repeat: no-repeat;
