--- a/client/components/AuthForms/authforms.scss
+++ b/client/components/AuthForms/authforms.scss
@@ -171,7 +171,7 @@
       &:valid {
         & + label {
           transform: translate(7px, 0px) scale(0.8);
-          &:after {
+          &.required-dot:after {
             opacity: 0;
           }
         }
@@ -193,18 +193,6 @@
       line-height: 23px;
       transform: translate(12px, 12px) scale(1);
       transition: 0.25s transform, 0.2s opacity;
-    }
-
-    label:after {
-      font-size: 20px;
-      font-weight: 500;
-      line-height: 24px;
-      display: inline-block;
-      vertical-align: top;
-      margin-left: 7px;
-      content: "\2022";
-      color: #24a0ed;
-      opacity: 1;
     }
   }
 
