changed padding to margin

--- a/client/pages/subreddits/create/create.scss
+++ b/client/pages/subreddits/create/create.scss
@@ -136,7 +136,7 @@
     &__adult {
       display: flex;
       align-items: center;
-      padding-top: 8px;
+      margin-top: 8px;
     }
 
     &__button {
