removed outline on tab

--- a/client/pages/subreddits/create/create.scss
+++ b/client/pages/subreddits/create/create.scss
@@ -137,6 +137,11 @@
       display: flex;
       align-items: center;
       margin-top: 8px;
+      cursor: pointer;
+
+      &:focus {
+        outline: none;
+      }
     }
 
     &__button {
