removed radio outline

--- a/client/pages/subreddits/create/create.scss
+++ b/client/pages/subreddits/create/create.scss
@@ -108,6 +108,10 @@
         margin-bottom: 16px;
         cursor: pointer;
 
+        &:focus {
+          outline: none;
+        }
+
         &__icon {
           height: 16px;
           width: 16px;
