--- a/client/pages/submit/submit.scss
+++ b/client/pages/submit/submit.scss
@@ -135,30 +135,112 @@
               right: 12px;
             }
           }
+        }
 
-          &__notify {
-            background-color: rgb(246, 247, 248);
-            border-radius: 0 0 6px 6px;
-            border-top: solid 1px rgb(237, 239, 241);
+        &__actions {
+          display: flex;
+          flex-direction: row;
+          justify-content: space-between;
+          align-items: center;
+          flex-wrap: wrap;
+          padding: 0 16px 16px;
+
+          & > div:nth-of-type(1) {
             display: flex;
-            flex-direction: column;
-            padding: 8px 16px 21px;
+            margin: 2px;
+          }
+
+          & > div:nth-of-type(2) {
+            display: flex;
+            justify-content: space-between;
+
+            & > button:nth-of-type(2) {
+              margin-left: 8px;
+            }
+          }
+
+          &__tag {
+            cursor: pointer;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 2.8rem;
+            line-height: 2.4rem;
+            font-size: 1.2rem;
+            font-weight: 700;
+            letter-spacing: 0.5px;
+            text-transform: uppercase;
+            border: 1px solid rgb(237, 239, 241);
+            border-color: rgb(237, 239, 241);
+            border-radius: 4px;
+            margin: 0 2px;
+            padding: 0 8px;
             position: relative;
+            color: rgb(135, 138, 140);
+            background-color: rgba(150, 150, 150, 0.05);
+            fill: rgb(135, 138, 140);
+            user-select: none;
+            box-sizing: border-box;
+
+            &:focus {
+              outline: none;
+            }
+
+            &--disabled {
+              cursor: not-allowed;
+              opacity: 0.5;
+            }
+
+            > svg {
+              height: 1.2rem;
+              width: 1.2rem;
+            }
+            > svg:nth-of-type(1) {
+              margin-right: 5px;
+            }
+            > svg:nth-of-type(2) {
+              margin-left: 2px;
+              margin-right: -2px;
+            }
+          }
+        }
+
+        &__notify {
+          background-color: rgb(246, 247, 248);
+          border-radius: 0 0 6px 6px;
+          border-top: solid 1px rgb(237, 239, 241);
+          display: flex;
+          flex-direction: column;
+          padding: 8px 16px 21px;
+          position: relative;
+          line-height: 1.8rem;
+          font-size: 1.4rem;
+          font-weight: 500;
+          color: rgb(28, 28, 28);
+
+          &__check {
+            margin-top: 8px;
+            display: flex;
+            align-items: center;
+            cursor: pointer;
+
+            &:focus {
+              outline: none;
+            }
+
+            &__svg {
+              height: 16px;
+              width: 16px;
+            }
+          }
+
+          &__connect {
             line-height: 1.8rem;
             font-size: 1.4rem;
             font-weight: 500;
-            color: rgb(28, 28, 28);
-
-            &__check {
-              margin-top: 8px;
-              display: flex;
-              align-items: center;
-              cursor: pointer;
-
-              &:focus {
-                outline: none;
-              }
-            }
+            color: $blue;
+            display: block;
+            margin: 8px 4px 0 0;
           }
         }
       }
