--- a/client/components/Text/text.scss
+++ b/client/components/Text/text.scss
@@ -1,4 +1,18 @@
 .editor {
+  border: 1px solid #edeff1;
+  border-radius: 4px;
+
+  &__body {
+    resize: vertical;
+    height: 100%;
+    min-height: 122px;
+    overflow: hidden;
+    padding: 8px 16px;
+    line-height: 2.1rem;
+    font-size: 1.4rem;
+    font-weight: 400;
+  }
+
   &__toolbar {
     display: flex;
     justify-content: space-between;
@@ -9,13 +23,15 @@
     z-index: 11;
     box-sizing: border-box;
     min-height: 37px;
-    padding: 4px;
+    padding: 4px 8px;
+    border-radius: 4px 4px 0 0;
 
     &__mdheader {
       line-height: 1.8rem;
       font-size: 1.4rem;
       font-weight: 500;
       color: #1c1c1c;
+      margin-left: 8px;
     }
 
     &__toggler {
