added margin-bottom to title holder

--- a/client/pages/submit/submit.scss
+++ b/client/pages/submit/submit.scss
@@ -107,6 +107,7 @@
 
           &__title {
             position: relative;
+            margin-bottom: 8px;
 
             &__input {
               height: 39px;
