added divider to differentiate between block and mark options

--- a/client/components/CustomEditor/customeditor.scss
+++ b/client/components/CustomEditor/customeditor.scss
@@ -47,6 +47,7 @@
 
     &__options {
       display: flex;
+      align-items: center;
       flex-wrap: wrap;
 
       &__item {
@@ -74,6 +75,14 @@
           font-size: 1.6rem;
           color: #878a8c;
         }
+      }
+
+      &__divider {
+        border-right: 1px solid #edeff1;
+        box-sizing: border-box;
+        height: 14px;
+        margin: 0 6px;
+        width: 1px;
       }
     }
   }
