--- a/client/components/CustomEditor/customeditor.scss
+++ b/client/components/CustomEditor/customeditor.scss
@@ -2,6 +2,40 @@
   border: 1px solid #edeff1;
   border-radius: 4px;
 
+  code {
+    color: #ff006d;
+    background-color: #eee;
+    padding: 3px;
+  }
+
+  pre {
+    background: #f6f7f8;
+
+    & + pre {
+      margin-top: -1em;
+    }
+
+    code {
+      color: #1c1c1c;
+      background-color: inherit;
+      padding: 0;
+      font-size: 1.3rem;
+    }
+  }
+
+  blockquote {
+    line-height: 21px;
+    margin: 8px;
+    padding: 2px 0 2px 10px;
+    border-left: 3px solid rgba(28, 28, 28, 0.2);
+    border-radius: 1.5px;
+
+    & + blockquote {
+      margin: -8px 8px 8px;
+      padding: 8px 0 2px 10px;
+    }
+  }
+
   &__body {
     resize: vertical;
     height: 100%;
@@ -69,6 +103,18 @@
 
         &__active svg {
           color: #1a1a1b;
+        }
+
+        &__multi-icon {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
+          svg:last-of-type {
+            font-size: 0.95rem;
+            color: white;
+            position: absolute;
+          }
         }
 
         &__icon {
