--- a/client/pages/submit/submit.scss
+++ b/client/pages/submit/submit.scss
@@ -309,6 +309,32 @@
   }
 }
 
+@media (max-width: 550px) {
+  .submit-container {
+    .submit {
+      &__form {
+        &__body {
+          &__types {
+            flex-wrap: wrap;
+
+            &__btn {
+              flex-basis: 100%;
+            }
+          }
+
+          &__actions {
+            flex-direction: column;
+
+            & > div:nth-of-type(2) {
+              margin-top: 16px;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
 @media (min-width: 960px) {
   .submit-container {
     .submit {
