added height/width for code block icon

--- a/client/components/Editor/editor.scss
+++ b/client/components/Editor/editor.scss
@@ -122,6 +122,8 @@
             font-size: 0.95rem;
             color: white;
             position: absolute;
+            height: 1.2rem;
+            width: 1.2rem;
           }
         }
 
