made totopbutton sticky so it can sit in the layout column

--- a/client/components/ToTopButton/totopbutton.scss
+++ b/client/components/ToTopButton/totopbutton.scss
@@ -1,6 +1,6 @@
 .totopbutton {
-  position: fixed;
-  right: 10px;
-  bottom: 10px;
+  position: sticky;
+  margin: 0 auto;
+  top: calc(100vh - 40px);
   z-index: 111;
 }
