edited some scss for components on right column

--- a/client/components/TrendingCommunity/trendingcommunity.scss
+++ b/client/components/TrendingCommunity/trendingcommunity.scss
@@ -1,5 +1,5 @@
 .trending-community {
-  width: 33rem;
+  width: 100%;
   font-size: 1.2rem;
   display: inline-block;
   border: 1px solid rgba($grey, 0.2);
