--- a/client/components/Layout/layout.scss
+++ b/client/components/Layout/layout.scss
@@ -10,7 +10,6 @@
   // the left column
   &__column:nth-of-type(1) {
     width: 100%;
-    padding: 0 5px;
   }
 
   // the right column
@@ -27,11 +26,19 @@
     &__container {
       padding: 20px 24px;
     }
+
+    &__column:nth-of-type(1) {
+      width: 640px;
+    }
   }
 }
 
 @media screen and (min-width: 960px) {
   .layout {
+    &__column:nth-of-type(1) {
+      width: 640px;
+    }
+
     &__column:nth-of-type(2) {
       display: block;
     }
