--- a/client/components/PostListCard/postlistcard.scss
+++ b/client/components/PostListCard/postlistcard.scss
@@ -6,6 +6,7 @@
   margin-bottom: 10px;
   position: relative;
   cursor: pointer;
+  box-sizing: border-box;
 
   &__vote-container {
     background-color: #f7f7f7;
