--- a/client/components/PostList/postlist.scss
+++ b/client/components/PostList/postlist.scss
@@ -97,7 +97,7 @@
         margin: 10px;
       }
 
-      &__body {
+      &__content {
         letter-spacing: 0.3px;
         padding: 5px 7px;
       }
