--- a/client/components/GrowingCommunities/growingcommunities.scss
+++ b/client/components/GrowingCommunities/growingcommunities.scss
@@ -7,20 +7,27 @@
   background-color: $white;
   text-align: left;
 
+  &__background {
+    background-image: url("/client/public/growing-images/banner-background.png");
+    width: 2rem;
+  }
+
   &__viewall-btn {
-    width: 80%;
+    width: 100%;
   }
 
   &__row {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: left;
+    margin-left: 2rem;
 
     &__image {
       align-self: center;
       height: 4.5rem;
       width: 4.5rem;
       border-radius: 50%;
+      margin-left: 4rem;
     }
   }
 
@@ -34,6 +41,10 @@
     align-self: flex-start;
     &__sub-info-1 {
       font-weight: bold;
+      margin-left: 1rem;
+    }
+    &__sub-info-2 {
+      margin-left: 1rem;
     }
   }
 }
