--- a/client/components/FooterBox/footerbox.scss
+++ b/client/components/FooterBox/footerbox.scss
@@ -1,21 +1,28 @@
-.footerboxcontainer {
+.footerbox {
   display: flex;
   flex-flow: row wrap;
   height: auto;
   width: 30rem;
-  justify-content: center;
-}
+  justify-content: left;
+  background-color: $white;
+  border-radius: 0.5rem;
+  box-sizing: border-box;
+  margin-top: 2rem;
+  margin-bottom: 8px;
+  line-height: 2rem;
+  font-size: 1.2rem;
 
-.footerboxlist {
-  list-style: none;
-  padding: 0;
-}
+  &__list {
+    list-style: none;
+    padding: 0 2rem 0 1.5rem;
+  }
 
-.footerboxlink {
-  color: inherit;
-  text-decoration: none;
-}
+  &__link {
+    color: inherit;
+    text-decoration: none;
+  }
 
-.redditlist {
-  padding-right: 8rem;
+  &__copyright {
+    margin-left: 1.5rem;
+  }
 }
