--- a/client/pages/r/[communityName]/community.scss
+++ b/client/pages/r/[communityName]/community.scss
@@ -126,5 +126,36 @@
         font-weight: bold;
       }
     }
+
+    &__createpost {
+      background-color: #fff;
+      border-radius: 4px;
+      border: 1px solid #ccc;
+      display: flex;
+      margin-bottom: 16px;
+      padding: 8px;
+      border-radius: 0.5rem;
+      box-sizing: border-box;
+
+      a {
+        background-color: #f6f7f8;
+        border-radius: 4px;
+        border: 1px solid #edeff1;
+        box-shadow: none;
+        box-sizing: border-box;
+        color: #a0a0a0;
+        display: flex;
+        align-items: center;
+        flex-grow: 1;
+        height: 38px;
+        margin-right: 8px;
+        outline: none;
+        padding: 0 16px;
+        text-decoration: none;
+        line-height: 2.1rem;
+        font-size: 1.4rem;
+        cursor: text;
+      }
+    }
   }
 }
