--- a/client/components/TrendingCommunity/trendingcommunity.scss
+++ b/client/components/TrendingCommunity/trendingcommunity.scss
@@ -1,5 +1,7 @@
 .trending-community {
-  width: 100%;
+  width: 32rem;
+  // height: 30rem;
+  padding: 0.5rem;
   font-size: 1.2rem;
   display: inline-block;
   border: 1px solid rgba($grey, 0.2);
