--- a/client/components/RecentPosts/recentposts.scss
+++ b/client/components/RecentPosts/recentposts.scss
@@ -7,6 +7,23 @@
 
   padding: 0.5rem;
 
+  &__row {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+    flex-wrap: nowrap;
+
+    padding-right: 0.5rem;
+  }
+
+  &-right {
+    padding-left: 2rem;
+  }
+
+  &-left {
+  }
+
   &__element {
     &:not(:last-child) {
       display: inline-block;
@@ -18,6 +35,13 @@
   &__title {
     font-size: 1.3rem;
     font-weight: bold;
+    margin-bottom: 1.5rem;
+
+    &-sub {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+    }
 
     &:hover {
       text-decoration: underline;
@@ -30,7 +54,6 @@
   }
 
   &__image-wrapper {
-    //padding: 0.5rem;
     &--icon {
       transform: translate(11%, 25%);
       height: 5.5rem;
@@ -51,8 +74,8 @@
 .clear {
   text-align: right;
   display: inline-block;
-  padding: 1rem;
-  margin-left: 28rem;
+  padding: 1rem 3rem 0.5rem 2rem;
+  margin-left: 26rem;
   font-size: 1.3rem;
   color: $grey;
   cursor: pointer;
