--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -7,6 +7,7 @@
 @import "components/header";
 @import "components/footer";
 @import "components/requireddot";
+@import "components/trendingcommunity";
 
 @import "pages/home";
 
