ToTopButton component refactored

--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -8,6 +8,7 @@
 @import "components/footer";
 @import "components/requireddot";
 @import "components/trendingcommunity";
+@import "components/totopbutton";
 
 @import "pages/home";
 
