Import statement for static footer and subreddits included

--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -9,6 +9,8 @@
 @import "components/requireddot";
 @import "components/trendingcommunity";
 @import "components/totopbutton";
+@import "components/subredditinfo";
+@import "components/staticfooter";
 
 @import "pages/home";
 
