SortView components refactored

--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -11,6 +11,7 @@
 @import "components/totopbutton";
 @import "components/subredditinfo";
 @import "components/staticfooter";
+@import "components/sortview";
 
 @import "pages/home";
 
