Recent posts component refactored

--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -12,6 +12,7 @@
 @import "components/subredditinfo";
 @import "components/staticfooter";
 @import "components/sortview";
+@import "components/recentposts";
 
 @import "pages/home";
 
