Radio components refactored

--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -13,6 +13,7 @@
 @import "components/staticfooter";
 @import "components/sortview";
 @import "components/recentposts";
+@import "components/radio";
 
 @import "pages/home";
 
