PremiumHero components refactored

--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -14,6 +14,7 @@
 @import "components/sortview";
 @import "components/recentposts";
 @import "components/radio";
+@import "components/premiumhero";
 
 @import "pages/home";
 
