Postlist component refactored

--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -15,6 +15,7 @@
 @import "components/recentposts";
 @import "components/radio";
 @import "components/premiumhero";
+@import "components/postlist";
 
 @import "pages/home";
 
