Navigation Component Refactored

--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -16,6 +16,7 @@
 @import "components/radio";
 @import "components/premiumhero";
 @import "components/postlist";
+@import "components/nav";
 
 @import "pages/home";
 
