Layout components refactored

--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -17,6 +17,7 @@
 @import "components/premiumhero";
 @import "components/postlist";
 @import "components/nav";
+@import "components/layout";
 
 @import "pages/home";
 
