--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -18,6 +18,7 @@
 @import "components/postlist";
 @import "components/nav";
 @import "components/layout";
+@import "components/_label";
 
 @import "pages/home";
 
