fix import statement for label component inside main.scss

--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -18,7 +18,7 @@
 @import "components/postlist";
 @import "components/nav";
 @import "components/layout";
-@import "components/_label";
+@import "components/label";
 
 @import "pages/home";
 
