Homebox component refactored

--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -19,6 +19,7 @@
 @import "components/nav";
 @import "components/layout";
 @import "components/label";
+@import "components/homebox";
 
 @import "pages/home";
 
