Growing community files moved to components folder

--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -20,6 +20,7 @@
 @import "components/layout";
 @import "components/label";
 @import "components/homebox";
+@import "components/growingcommunities";
 
 @import "pages/home";
 
