--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -21,6 +21,7 @@
 @import "components/label";
 @import "components/homebox";
 @import "components/growingcommunities";
+@import "components/faqdropdown";
 
 @import "pages/home";
 
