Editor component related files refactored

--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -22,6 +22,7 @@
 @import "components/homebox";
 @import "components/growingcommunities";
 @import "components/faqdropdown";
+@import "components/editor";
 
 @import "pages/home";
 
