Checkbox related components refactored

--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -23,6 +23,7 @@
 @import "components/growingcommunities";
 @import "components/faqdropdown";
 @import "components/editor";
+@import "components/checkbox";
 
 @import "pages/home";
 
