Button component related files moved

--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -24,6 +24,7 @@
 @import "components/faqdropdown";
 @import "components/editor";
 @import "components/checkbox";
+@import "components/button";
 
 @import "pages/home";
 
