Authform related files moved

--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -25,6 +25,7 @@
 @import "components/editor";
 @import "components/checkbox";
 @import "components/button";
+@import "components/authforms";
 
 @import "pages/home";
 
