--- a/client/sass/components/_postlist.scss
+++ b/client/sass/components/_postlist.scss
@@ -11,6 +11,8 @@
     position: relative;
     cursor: pointer;
     box-sizing: border-box;
+    line-height: 1.6rem;
+    font-size: 1.2rem;
 
     &__vote-container {
       background-color: #f7f7f7;
@@ -31,13 +33,16 @@
           transition: 0.2s all;
           padding: 2px;
           border-radius: 2px;
+          font-size: 1.5rem;
 
           &:hover {
             background-color: $grey;
           }
+
           &.postlist-card__vote__up:hover {
             color: $orange;
           }
+
           &.postlist-card__vote__down:hover {
             color: $blue;
           }
@@ -56,8 +61,6 @@
       height: 100%;
 
       &__info {
-        line-height: 1.6rem;
-        font-size: 1.2rem;
         height: 30px;
         margin: 5px 0;
         display: flex;
@@ -86,6 +89,10 @@
             margin-left: 5px;
             text-decoration: none;
             color: inherit;
+
+            &:hover {
+              text-decoration: underline;
+            }
           }
         }
 
@@ -97,12 +104,14 @@
 
       &__title {
         font-size: 1.4em;
-        margin: 10px;
+        margin: 10px 10px 0;
       }
 
       &__content {
         letter-spacing: 0.3px;
-        padding: 5px 7px;
+        -webkit-mask-image: linear-gradient(180deg, #000 60%, transparent);
+        mask-image: linear-gradient(180deg, #000 60%, transparent);
+        max-height: 150px;
       }
     }
 
@@ -111,8 +120,6 @@
       height: 30px;
       padding-left: 50px;
       color: #787c7e;
-      font-size: 0.95em;
-      line-height: 0.95em;
       display: flex;
       align-items: center;
 
