--- a/client/sass/components/_slate.scss
+++ b/client/sass/components/_slate.scss
@@ -1,5 +1,24 @@
-.editor {
+.slate__editor {
   border: 1px solid #edeff1;
+
+  .slate__body {
+    resize: vertical;
+    height: 100%;
+    min-height: 122px;
+    overflow: hidden;
+    padding: 8px 16px;
+  }
+}
+
+.slate__render {
+  max-height: 150px;
+
+  .slate__body {
+    padding: 8px 10px;
+  }
+}
+
+.slate {
   border-radius: 4px;
 
   code {
@@ -37,11 +56,6 @@
   }
 
   &__body {
-    resize: vertical;
-    height: 100%;
-    min-height: 122px;
-    overflow: hidden;
-    padding: 8px 16px;
     line-height: 2.1rem;
     font-size: 1.4rem;
     font-weight: 400;
@@ -145,7 +159,7 @@
 }
 
 @media screen and (max-width: 767px) {
-  .editor {
+  .slate {
     &__toolbar {
       justify-content: flex-end;
     }
