created a box to display error messages in form

--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -15,6 +15,7 @@
 @import "components/homebox";
 @import "components/label";
 @import "components/layout";
+@import "components/messagebox";
 @import "components/nav";
 @import "components/postlist";
 @import "components/premiumhero";
