created stylesheet for viewpost

--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -32,5 +32,6 @@
 @import "pages/home";
 @import "pages/subredditcreate";
 @import "pages/viewcommunity";
+@import "pages/viewpost";
 
 @import "vendors/normalize";
