extracted some of the postcard components

--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -17,7 +17,7 @@
 @import "components/layout";
 @import "components/messagebox";
 @import "components/nav";
-@import "components/postlist";
+@import "components/postcard";
 @import "components/premiumhero";
 @import "components/radio";
 @import "components/recentposts";
