--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -28,6 +28,7 @@
 @import "components/subredditinfo";
 @import "components/totopbutton";
 @import "components/trendingcommunity";
+@import "components/votes";
 
 @import "pages/home";
 @import "pages/subredditcreate";
