--- a/client/sass/pages/_viewpost.scss
+++ b/client/sass/pages/_viewpost.scss
@@ -33,40 +33,21 @@
     color: #d7dadc;
 
     &__votes {
-      font-size: 1.2rem;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      margin: 10px 5px;
+      padding: 0 12px;
+      border-left: 1px solid #616161;
+      border-right: 1px solid #616161;
 
-      svg {
-        transition: 0.2s all;
-        padding: 2px;
-        border-radius: 2px;
-        font-size: 1.5rem;
-
-        &:hover {
-          background-color: $grey;
-        }
-
-        &.viewpost__banner__votes__arrow {
-          cursor: pointer;
-
-          &__up:hover {
-            color: $orange;
-          }
-          &__down:hover {
-            color: $blue;
-          }
-        }
-      }
-
-      &__score {
+      svg:hover {
+        background-color: transparent;
       }
     }
 
     &__title {
+      width: 100%;
+      padding: 0 16px;
+      white-space: pre;
+      text-overflow: ellipsis;
+      overflow: hidden;
     }
 
     &__closebtn {
@@ -75,7 +56,7 @@
       color: inherit;
 
       &:hover {
-        color: #fff;
+        background-color: #616161;
         border-color: transparent;
       }
     }
