--- a/client/sass/pages/_viewpost.scss
+++ b/client/sass/pages/_viewpost.scss
@@ -31,6 +31,7 @@
     align-items: center;
     justify-content: space-between;
     color: #d7dadc;
+    z-index: 11;
 
     &__votes {
       padding: 0 12px;
