create user comment section and edited classNames

--- a/client/sass/pages/_viewpost.scss
+++ b/client/sass/pages/_viewpost.scss
@@ -63,14 +63,10 @@
       }
     }
   }
-}
 
-.post {
-  &__container {
+  &__content {
     border-radius: 0.5rem;
     background-color: #fff;
     width: 100%;
-    &__title {
-    }
   }
 }
