initial comments progress

--- a/client/sass/pages/_viewpost.scss
+++ b/client/sass/pages/_viewpost.scss
@@ -69,4 +69,12 @@
     background-color: #fff;
     width: 100%;
   }
+
+  // &__comment {
+  //   &__create {
+  //   }
+
+  //   &__list {
+  //   }
+  // }
 }
