--- a/client/sass/components/_growingcommunities.scss
+++ b/client/sass/components/_growingcommunities.scss
@@ -1,50 +1,71 @@
 .growing-communities {
   width: 100%;
-  font-size: 1.2rem;
-  display: inline-block;
-  border: 1px solid rgba($grey, 0.2);
+  box-sizing: border-box;
+  border: 1px solid #d7d7d7;
   border-radius: 0.5rem;
   background-color: $white;
-  text-align: left;
+  font-size: 1.4rem;
 
   &__background {
-    background-image: url("/client/public/growing-images/banner-background.png");
-    width: 2rem;
+    background-image: url("/growing-images/banner-background.png");
+    background-position: 50%;
+    width: 100%;
+    height: 80px;
+    position: relative;
+    border-top-right-radius: 0.5rem;
+    border-top-left-radius: 0.5rem;
   }
 
-  &__viewall-btn {
-    width: 100%;
+  &__headline {
+    font-size: 1.6rem;
+    color: $white;
+    margin: 0;
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
   }
 
   &__row {
     display: flex;
-    flex-direction: row;
     justify-content: left;
-    margin-left: 2rem;
+    align-items: center;
+    height: 48px;
+    padding: 0 1.2rem;
+    color: #1a1a1a;
+    text-decoration: none;
 
-    &__image {
-      align-self: center;
-      height: 4.5rem;
-      width: 4.5rem;
-      border-radius: 50%;
-      margin-left: 4rem;
+    &:not(:nth-of-type(1)) {
+      border-top: 1px solid rgba($grey, 0.5);
     }
-  }
 
-  &__headline {
-    text-transform: uppercase;
-    margin-left: 1rem;
-    font-weight: bold;
-  }
-
-  &__subreddit-info {
-    align-self: flex-start;
-    &__sub-info-1 {
+    &__index {
       font-weight: bold;
-      margin-left: 1rem;
+      width: 20px;
+      text-align: right;
     }
-    &__sub-info-2 {
-      margin-left: 1rem;
+
+    &__arrow {
+      margin-left: 0.8rem;
+      width: 20px;
+    }
+
+    &__icon {
+      height: 3.2rem;
+      width: 3.2rem;
+      border-radius: 50%;
+      margin: 0 0.8rem;
+    }
+
+    &__name {
+      margin: 0;
+    }
+  }
+
+  &__button {
+    margin: 1.2rem;
+
+    &__viewall {
+      width: 100%;
     }
   }
 }
