--- a/client/sass/components/_growingcommunities.scss
+++ b/client/sass/components/_growingcommunities.scss
@@ -5,6 +5,7 @@
   border-radius: 0.5rem;
   background-color: $white;
   font-size: 1.4rem;
+  margin-bottom: 1.6rem;
 
   &__background {
     background-image: url("/growing-images/banner-background.png");
@@ -52,7 +53,6 @@
     &__icon {
       height: 3.2rem;
       width: 3.2rem;
-      border-radius: 50%;
       margin: 0 0.8rem;
     }
 
